Reset root font size to even value to avoid input misalignment issues in webkit browsers

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* Resets */
 :root {
-  font-size: 19px;
+  font-size: 18px;
 }
 
 html {
